# ecentric_workspace

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
ecentric_workspace/: api.py  gbs_comment_proxy.py  gemini_api.py  hooks.py  modules.txt  patches.txt
ecentric_workspace/action_center/: api.py  resolvers.py
ecentric_workspace/action_center/patches/: p001_homepage_action_center.py
ecentric_workspace/action_center/tests/: test_api.py  test_patch_p001.py  test_resolvers.py
ecentric_workspace/alerts/: api.py  api_actions.py  api_alerts.py  api_brands.py  api_catalogue_sync.py  api_dashboard.py  api_diag.py  api_exemptions.py  api_omisell.py  api_order_retry.py  api_pauses.py  api_policies.py  api_probe_products.py  api_repair.py  api_rules.py  api_sku_catalog.py  nav.py  pages.py  permissions.py  tasks.py
ecentric_workspace/approval_center/: hub_page_sync.py  nav.py  page_sync_util.py  permissions.py
ecentric_workspace/fixtures/: custom_field.json  role.json
ecentric_workspace/hr/: nav.py
ecentric_workspace/legacy_pages/: nav.py  serving.py
ecentric_workspace/notification_center/: api.py  events.py  resolvers.py  service.py
ecentric_workspace/pm/: __init__.py  nav.py  pages.py  permissions.py
ecentric_workspace/reporting/: nav.py  pages.py
ecentric_workspace/shell/: README.md  api.py  boundary.py  fallback.py  nav.py  route_policy.py
ecentric_workspace/weekly_report/: api.py  events.py  scheduler.py  service.py  week_calendar.py
pm_v2_phase1/: PM_BATCH_G4_3_TERMINAL_OPS_LOCK.md  PM_MEMBER_UAT_ROUND1.md
(+734 files in other folders)
