[project]
name = "ecentric_workspace"
authors = [
    { name = "eCentric", email = "it@ecentric.vn"}
]
description = "Employee portal + approval workflow for eCentric"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "ecentric_workspace"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
